package server

import (
	"context"
	"crypto/tls"
	"crypto/x509"
	"fmt"
	"log"
	"net"
	"os"
	"sync"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"

	pb "github.com/trusted-space/kernel/proto/kernel/v1"
	"github.com/trusted-space/kernel/kernel/circulation"
	"github.com/trusted-space/kernel/kernel/control"
	"github.com/trusted-space/kernel/kernel/security"
)

// KernelConfig å†…æ ¸é…ç½®
type KernelConfig struct {
	KernelID          string
	KernelType        string
	Description       string
	Address           string
	Port              int
	KernelPort        int
	CACertPath        string
	KernelCertPath    string
	KernelKeyPath     string
	HeartbeatInterval int
	ConnectTimeout    int
	MaxRetries        int
}

// KernelInfo å†…æ ¸ä¿¡æ¯
type KernelInfo struct {
	KernelID      string
	Address       string
	Port          int    // å†…æ ¸é—´é€šä¿¡ç«¯å£
	MainPort      int    // ä¸»æœåŠ¡å™¨ç«¯å£ï¼ˆç”¨äºIdentityServiceç­‰ï¼‰
	Status        string
	LastHeartbeat int64
	PublicKey     string
	Description   string
	Client        pb.KernelServiceClient
	conn          *grpc.ClientConn
}

// MultiKernelManager å¤šå†…æ ¸ç®¡ç†å™¨
type MultiKernelManager struct {
	config         *KernelConfig
	registry       *control.Registry
	channelManager *circulation.ChannelManager

	kernels   map[string]*KernelInfo
	kernelsMu sync.RWMutex

	running bool
}

// NewMultiKernelManager åˆ›å»ºå¤šå†…æ ¸ç®¡ç†å™¨
func NewMultiKernelManager(config *KernelConfig, registry *control.Registry,
	channelManager *circulation.ChannelManager) (*MultiKernelManager, error) {

	manager := &MultiKernelManager{
		config:         config,
		registry:       registry,
		channelManager: channelManager,
		kernels:        make(map[string]*KernelInfo),
		running:        true,
	}

	return manager, nil
}

// StartKernelServer å¯åŠ¨å†…æ ¸é—´é€šä¿¡æœåŠ¡å™¨
func (m *MultiKernelManager) StartKernelServer() error {
	address := fmt.Sprintf("%s:%d", m.config.Address, m.config.KernelPort)

	// åˆ›å»ºTLSé…ç½®ç”¨äºå†…æ ¸é—´é€šä¿¡
	cert, err := tls.LoadX509KeyPair(m.config.KernelCertPath, m.config.KernelKeyPath)
	if err != nil {
		return fmt.Errorf("failed to load kernel certificates: %w", err)
	}

	// åˆ›å»ºè¯ä¹¦æ± ï¼ŒåŒ…å«è‡ªå·±çš„CAå’Œæ‰€æœ‰å·²çŸ¥å¯¹ç­‰å†…æ ¸çš„CA
	caCertPool := x509.NewCertPool()

	// æ·»åŠ è‡ªå·±çš„CAè¯ä¹¦
	ownCACert, err := os.ReadFile(m.config.CACertPath)
	if err != nil {
		return fmt.Errorf("failed to read own CA certificate: %w", err)
	}
	if !caCertPool.AppendCertsFromPEM(ownCACert) {
		return fmt.Errorf("failed to append own CA certificate")
	}

	// æ·»åŠ æ‰€æœ‰å·²çŸ¥å¯¹ç­‰å†…æ ¸çš„CAè¯ä¹¦
	m.kernelsMu.RLock()
	for kernelID := range m.kernels {
		peerCACertPath := fmt.Sprintf("certs/peer-%s-ca.crt", kernelID)
		if peerCACert, err := os.ReadFile(peerCACertPath); err == nil {
			if !caCertPool.AppendCertsFromPEM(peerCACert) {
				log.Printf("Warning: failed to append peer CA certificate for %s", kernelID)
			} else {
				log.Printf("Loaded peer CA certificate for %s", kernelID)
			}
		}
	}
	m.kernelsMu.RUnlock()

	creds := credentials.NewTLS(&tls.Config{
		Certificates: []tls.Certificate{cert},
		ClientAuth:   tls.RequireAndVerifyClientCert,
		ClientCAs:    caCertPool,
		RootCAs:      caCertPool,
	})

	server := grpc.NewServer(grpc.Creds(creds))

	kernelService := NewKernelServiceServer(m, m.channelManager, m.registry)
	pb.RegisterKernelServiceServer(server, kernelService)

	listener, err := net.Listen("tcp", address)
	if err != nil {
		return fmt.Errorf("failed to listen on kernel port: %w", err)
	}

	log.Printf("ğŸ”— Kernel-to-kernel server started on %s", address)

	if err := server.Serve(listener); err != nil {
		return fmt.Errorf("failed to serve kernel server: %w", err)
	}

	return nil
}

// ConnectToKernel è¿æ¥åˆ°å¦ä¸€ä¸ªå†…æ ¸
func (m *MultiKernelManager) ConnectToKernel(kernelID, address string, port int) error {
	m.kernelsMu.Lock()
	defer m.kernelsMu.Unlock()

	// æ£€æŸ¥æ˜¯å¦å·²ç»è¿æ¥
	if _, exists := m.kernels[kernelID]; exists {
		return fmt.Errorf("already connected to kernel %s", kernelID)
	}

	// åˆ›å»ºTLSé…ç½®
	cert, err := tls.LoadX509KeyPair(m.config.KernelCertPath, m.config.KernelKeyPath)
	if err != nil {
		return fmt.Errorf("failed to load certificates: %w", err)
	}

	// åˆ›å»ºè¯ä¹¦æ± ï¼ŒåŒ…å«è‡ªå·±çš„CAå’Œå¯èƒ½çš„å¯¹ç­‰CA
	caCertPool := x509.NewCertPool()

	// æ·»åŠ è‡ªå·±çš„CAè¯ä¹¦
	ownCACert, err := os.ReadFile(m.config.CACertPath)
	if err != nil {
		return fmt.Errorf("failed to read own CA certificate: %w", err)
	}
	if !caCertPool.AppendCertsFromPEM(ownCACert) {
		return fmt.Errorf("failed to append own CA certificate")
	}

	// æ£€æŸ¥æ˜¯å¦å·²ç»æœ‰å¯¹ç­‰å†…æ ¸çš„CAè¯ä¹¦ï¼Œå¦‚æœæœ‰ä¹Ÿæ·»åŠ 
	peerCACertPath := fmt.Sprintf("certs/peer-%s-ca.crt", kernelID)
	if peerCACert, err := os.ReadFile(peerCACertPath); err == nil {
		if !caCertPool.AppendCertsFromPEM(peerCACert) {
			log.Printf("Warning: failed to append peer CA certificate for %s", kernelID)
		} else {
			log.Printf("Using existing peer CA certificate for %s", kernelID)
		}
	}

	tlsConfig := &tls.Config{
		Certificates: []tls.Certificate{cert},
		RootCAs:      caCertPool,
		// å¯¹äºå†…æ ¸é—´é€šä¿¡ï¼Œæˆ‘ä»¬éœ€è¦å®¢æˆ·ç«¯è®¤è¯
		ClientAuth: tls.RequireAndVerifyClientCert,
		ClientCAs:  caCertPool,
	}

	creds := credentials.NewTLS(tlsConfig)

	// è¿æ¥åˆ°ç›®æ ‡å†…æ ¸
	targetAddr := fmt.Sprintf("%s:%d", address, port)
	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(m.config.ConnectTimeout)*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, targetAddr, grpc.WithTransportCredentials(creds))
	if err != nil {
		return fmt.Errorf("failed to connect to kernel %s: %w", kernelID, err)
	}

	client := pb.NewKernelServiceClient(conn)

	// è¯»å–è‡ªå·±çš„CAè¯ä¹¦
	caCertData, err := os.ReadFile(m.config.CACertPath)
	if err != nil {
		conn.Close()
		return fmt.Errorf("failed to read CA certificate: %w", err)
	}

	// æ³¨å†Œè‡ªå·±åˆ°ç›®æ ‡å†…æ ¸
	registerReq := &pb.RegisterKernelRequest{
		KernelId:     m.config.KernelID,
		Address:      m.config.Address,
		Port:         int32(m.config.Port),
		PublicKey:    "", // TODO: è¯»å–å…¬é’¥
		CaCertificate: caCertData, // å‘é€è‡ªå·±çš„CAè¯ä¹¦
		Timestamp:    time.Now().Unix(),
	}

	resp, err := client.RegisterKernel(context.Background(), registerReq)
	if err != nil {
		conn.Close()
		return fmt.Errorf("failed to register with kernel %s: %w", kernelID, err)
	}

	if !resp.Success {
		conn.Close()
		return fmt.Errorf("registration rejected by kernel %s: %s", kernelID, resp.Message)
	}

	// ä¿å­˜å¯¹æ–¹çš„CAè¯ä¹¦
	if len(resp.PeerCaCertificate) > 0 {
		peerCACertPath := fmt.Sprintf("certs/peer-%s-ca.crt", kernelID)
		if err := os.WriteFile(peerCACertPath, resp.PeerCaCertificate, 0644); err != nil {
			log.Printf("Warning: failed to save peer CA certificate for %s: %v", kernelID, err)
		} else {
			log.Printf("Saved peer CA certificate for kernel %s", kernelID)
		}
	}

	// ä¿å­˜å†…æ ¸ä¿¡æ¯
	kernelInfo := &KernelInfo{
		KernelID:      kernelID,
		Address:       address,
		Port:          port,          // å†…æ ¸é—´é€šä¿¡ç«¯å£
		MainPort:      m.config.Port, // ä¸»æœåŠ¡å™¨ç«¯å£
		Status:        "active",
		LastHeartbeat: time.Now().Unix(),
		Client:        client,
		conn:          conn,
	}

	m.kernels[kernelID] = kernelInfo

	// å¯åŠ¨å¿ƒè·³goroutine
	go m.kernelHeartbeat(kernelID)

	log.Printf("âœ… Connected to kernel %s at %s:%d", kernelID, address, port)
	return nil
}

// DisconnectFromKernel æ–­å¼€ä¸å†…æ ¸çš„è¿æ¥
func (m *MultiKernelManager) DisconnectFromKernel(kernelID string) error {
	m.kernelsMu.Lock()
	defer m.kernelsMu.Unlock()

	kernelInfo, exists := m.kernels[kernelID]
	if !exists {
		return fmt.Errorf("not connected to kernel %s", kernelID)
	}

	kernelInfo.conn.Close()
	delete(m.kernels, kernelID)

	log.Printf("âœ… Disconnected from kernel %s", kernelID)
	return nil
}

// ListKnownKernels åˆ—å‡ºå·²çŸ¥å†…æ ¸
func (m *MultiKernelManager) ListKnownKernels() []*KernelInfo {
	m.kernelsMu.RLock()
	defer m.kernelsMu.RUnlock()

	kernels := make([]*KernelInfo, 0, len(m.kernels))
	for _, kernel := range m.kernels {
		kernels = append(kernels, kernel)
	}

	return kernels
}

// GetConnectedKernelCount è·å–å·²è¿æ¥å†…æ ¸æ•°é‡
func (m *MultiKernelManager) GetConnectedKernelCount() int {
	m.kernelsMu.RLock()
	defer m.kernelsMu.RUnlock()
	return len(m.kernels)
}

// connectToKernelIdentityService è¿æ¥åˆ°å†…æ ¸çš„IdentityServiceï¼ˆä¸»æœåŠ¡å™¨ç«¯å£ï¼‰
func (m *MultiKernelManager) connectToKernelIdentityService(kernel *KernelInfo) (*grpc.ClientConn, error) {
	// ä½¿ç”¨securityåŒ…çš„å®¢æˆ·ç«¯TLSé…ç½®æ¥ç¡®ä¿é…ç½®æ­£ç¡®
	creds, err := security.NewClientTransportCredentials(
		m.config.CACertPath,
		m.config.KernelCertPath,
		m.config.KernelKeyPath,
		"", // serverName ä¸ºç©ºï¼Œå› ä¸ºæˆ‘ä»¬ä½¿ç”¨IPåœ°å€
	)
	if err != nil {
		return nil, fmt.Errorf("failed to create client credentials: %w", err)
	}

	// è¿æ¥åˆ°ç›®æ ‡å†…æ ¸çš„ä¸»æœåŠ¡å™¨ç«¯å£ï¼ˆè€Œä¸æ˜¯kernel_portï¼‰
	targetAddr := fmt.Sprintf("%s:%d", kernel.Address, kernel.MainPort) // kernel.MainPortæ˜¯ä¸»æœåŠ¡å™¨ç«¯å£
	ctx, cancel := context.WithTimeout(context.Background(), time.Duration(m.config.ConnectTimeout)*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, targetAddr, grpc.WithTransportCredentials(creds))
	if err != nil {
		return nil, fmt.Errorf("failed to connect to kernel %s identity service: %w", kernel.KernelID, err)
	}

	return conn, nil
}

// CollectAllConnectors æ”¶é›†æ‰€æœ‰è¿æ¥å†…æ ¸çš„è¿æ¥å™¨ä¿¡æ¯
func (m *MultiKernelManager) CollectAllConnectors() ([]*pb.ConnectorInfo, error) {
	var allConnectors []*pb.ConnectorInfo

	// æ·»åŠ æœ¬åœ°è¿æ¥å™¨
	localConnectors := m.registry.ListConnectors()
	for _, conn := range localConnectors {
		allConnectors = append(allConnectors, &pb.ConnectorInfo{
			ConnectorId:   conn.ConnectorID,
			EntityType:    conn.EntityType,
			PublicKey:     conn.PublicKey,
			Status:        string(conn.Status),
			LastHeartbeat: conn.LastHeartbeat.Unix(),
			RegisteredAt:  conn.RegisteredAt.Unix(),
			KernelId:      m.config.KernelID, // æœ¬åœ°è¿æ¥å™¨æ ‡è®°ä¸ºæœ¬å†…æ ¸
		})
	}

	// ä»æ‰€æœ‰è¿æ¥çš„å†…æ ¸æ”¶é›†è¿æ¥å™¨ä¿¡æ¯
	m.kernelsMu.RLock()
	kernels := make([]*KernelInfo, 0, len(m.kernels))
	for _, kernel := range m.kernels {
		kernels = append(kernels, kernel)
	}
	m.kernelsMu.RUnlock()

	for _, kernel := range kernels {
		log.Printf("Attempting to collect connectors from kernel %s at %s:%d", kernel.KernelID, kernel.Address, kernel.MainPort)

		// ä¸ºæ¯ä¸ªå†…æ ¸åˆ›å»ºåˆ°å…¶ä¸»æœåŠ¡å™¨ç«¯å£çš„æ–°è¿æ¥ï¼ˆç”¨äºè®¿é—®IdentityServiceï¼‰
		identityConn, err := m.connectToKernelIdentityService(kernel)
		if err != nil {
			log.Printf("Failed to connect to identity service of kernel %s: %v", kernel.KernelID, err)
			continue
		}

		log.Printf("Successfully connected to identity service of kernel %s", kernel.KernelID)

		// ä½¿ç”¨IdentityæœåŠ¡å‘ç°è¿æ¥å™¨
		client := pb.NewIdentityServiceClient(identityConn)
		req := &pb.DiscoverRequest{
			RequesterId: m.config.KernelID,
		}

		resp, err := client.DiscoverConnectors(context.Background(), req)
		identityConn.Close() // ä½¿ç”¨å®Œåå…³é—­è¿æ¥

		if err != nil {
			log.Printf("Failed to discover connectors from kernel %s: %v", kernel.KernelID, err)
			continue
		}

		log.Printf("Successfully discovered %d connectors from kernel %s", len(resp.Connectors), kernel.KernelID)

		// æ·»åŠ è¿œç¨‹è¿æ¥å™¨ä¿¡æ¯
		for _, remoteConn := range resp.Connectors {
			// æ ‡è®°ä¸ºè¿œç¨‹å†…æ ¸çš„è¿æ¥å™¨
			if remoteConn.KernelId == "" {
				remoteConn.KernelId = kernel.KernelID
			}
			allConnectors = append(allConnectors, remoteConn)
		}
	}

	return allConnectors, nil
}

// SyncConnectorInfo åŒæ­¥è¿æ¥å™¨ä¿¡æ¯
func (m *MultiKernelManager) SyncConnectorInfo(targetKernelID string) error {
	connectors := m.registry.ListConnectors()

	req := &pb.SyncConnectorInfoRequest{
		SourceKernelId: m.config.KernelID,
		Connectors:     make([]*pb.ConnectorInfo, len(connectors)),
		SyncType:       "incremental",
	}

	for i, conn := range connectors {
		req.Connectors[i] = &pb.ConnectorInfo{
			ConnectorId:   conn.ConnectorID,
			EntityType:    conn.EntityType,
			PublicKey:     conn.PublicKey,
			Status:        string(conn.Status),
			LastHeartbeat: conn.LastHeartbeat.Unix(),
			RegisteredAt:  conn.RegisteredAt.Unix(),
			KernelId:      m.config.KernelID,
		}
	}

	if targetKernelID != "" {
		// åŒæ­¥åˆ°æŒ‡å®šå†…æ ¸
		m.kernelsMu.RLock()
		kernelInfo, exists := m.kernels[targetKernelID]
		m.kernelsMu.RUnlock()

		if !exists {
			return fmt.Errorf("not connected to kernel %s", targetKernelID)
		}

		_, err := kernelInfo.Client.SyncConnectorInfo(context.Background(), req)
		return err
	} else {
		// å¹¿æ’­åˆ°æ‰€æœ‰å·²è¿æ¥çš„å†…æ ¸
		m.kernelsMu.RLock()
		kernels := make([]*KernelInfo, 0, len(m.kernels))
		for _, kernel := range m.kernels {
			kernels = append(kernels, kernel)
		}
		m.kernelsMu.RUnlock()

		for _, kernel := range kernels {
			go func(k *KernelInfo) {
				_, err := k.Client.SyncConnectorInfo(context.Background(), req)
				if err != nil {
					log.Printf("Failed to sync connectors with kernel %s: %v", k.KernelID, err)
				}
			}(kernel)
		}
	}

	return nil
}

// ForwardData è½¬å‘æ•°æ®åˆ°å…¶ä»–å†…æ ¸
func (m *MultiKernelManager) ForwardData(targetKernelID string, dataPacket *pb.DataPacket) error {
	m.kernelsMu.RLock()
	kernelInfo, exists := m.kernels[targetKernelID]
	m.kernelsMu.RUnlock()

	if !exists {
		return fmt.Errorf("not connected to kernel %s", targetKernelID)
	}

	req := &pb.ForwardDataRequest{
		SourceKernelId: m.config.KernelID,
		TargetKernelId: targetKernelID,
		ChannelId:      dataPacket.ChannelId,
		DataPacket:     dataPacket,
	}

	_, err := kernelInfo.Client.ForwardData(context.Background(), req)
	return err
}

// kernelHeartbeat å†…æ ¸å¿ƒè·³
func (m *MultiKernelManager) kernelHeartbeat(kernelID string) {
	ticker := time.NewTicker(time.Duration(m.config.HeartbeatInterval) * time.Second)
	defer ticker.Stop()

	for m.running {
		select {
		case <-ticker.C:
			m.sendHeartbeat(kernelID)
		}
	}
}

// sendHeartbeat å‘é€å¿ƒè·³
func (m *MultiKernelManager) sendHeartbeat(kernelID string) {
	m.kernelsMu.RLock()
	kernelInfo, exists := m.kernels[kernelID]
	m.kernelsMu.RUnlock()

	if !exists {
		return
	}

	req := &pb.KernelHeartbeatRequest{
		KernelId: m.config.KernelID,
		Timestamp: time.Now().Unix(),
		Stats: map[string]int32{
			"connectors": int32(len(m.registry.ListConnectors())),
			"channels":   int32(len(m.channelManager.ListChannels())),
		},
	}

	resp, err := kernelInfo.Client.KernelHeartbeat(context.Background(), req)
	if err != nil {
		log.Printf("Heartbeat failed for kernel %s: %v", kernelID, err)
		// TODO: å¤„ç†è¿æ¥å¤±è´¥ï¼Œå¯èƒ½éœ€è¦é‡è¿
		return
	}

	// æ›´æ–°æœ€åå¿ƒè·³æ—¶é—´
	m.kernelsMu.Lock()
	if kernelInfo, exists := m.kernels[kernelID]; exists {
		kernelInfo.LastHeartbeat = time.Now().Unix()
	}
	m.kernelsMu.Unlock()

	// å¤„ç†å…¶ä»–å†…æ ¸çš„çŠ¶æ€æ›´æ–°
	for _, update := range resp.Updates {
		log.Printf("Kernel %s status update: %s -> %s",
			update.KernelId, update.KernelId, update.Status)
	}
}

// Shutdown å…³é—­å¤šå†…æ ¸ç®¡ç†å™¨
func (m *MultiKernelManager) Shutdown() {
	m.running = false

	m.kernelsMu.Lock()
	defer m.kernelsMu.Unlock()

	for kernelID, kernelInfo := range m.kernels {
		kernelInfo.conn.Close()
		log.Printf("Closed connection to kernel %s", kernelID)
	}

	m.kernels = make(map[string]*KernelInfo)
}
